<resources>
    <string name="app_name">TaylorInsuranceApp</string>
    <string name="loginEmailView">Email:</string>
    <string name="loginPasswordView">Password:</string>
    <string name="userInfoNameView">Name</string>
    <string name="userInfoGenderView">Gender</string>
    <string name="userInfoAddressView">Address</string>
    <string name="userInfoClientIDView">Client ID</string>
    <string name="userInfoCityView">City</string>
    <string name="userInfoPhoneView">Phone</string>
    <string name="userInfoProvinceView">Province</string>
    <string name="userInfoPostalView">Postal Code</string>
    <string name="userInfoDOBView">Date Of Birth</string>
    <string name="userInfoIssueDate">Lic. Issue. Date</string>
    <string name="userInfoEmailView">Email</string>
    <string name="userInfoLicenseNumView">License Number</string>
    <string name="homeQuoteIDLbl">Quote ID:</string>
    <string name="homeQuoteDateLbl">Quote Date:</string>
    <string name="homeQuoteDateView">YYYY-MM-DD</string>
    <string name="homeQuoteExpireLbl">Expiry Date:</string>
    <string name="homeQuoteIDView">ID Number Here</string>
    <string name="homeQuoteExpiryView">YYYY-MM-DD</string>
    <string name="homeQuotePremiumLbl">Base Premium:</string>
    <string name="homeQuotePremiumView">12345.12</string>
    <string name="homeQuoteTaxLbl">Tax:</string>
    <string name="homeQuoteTaxView">12345.12</string>
    <string name="homeQuoteTotalLbl">Total:</string>
    <string name="homeQuoteTotalView">12345.12</string>
    <string name="homeInfoIDLbl">Home ID:</string>
    <string name="homeInfoIDView">The ID Number</string>
    <string name="homeInfoYearBuiltLbl">Year Built:</string>
    <string name="homeInfoYearBuiltView">YYYY-MM-DD</string>
    <string name="homeInfoDwellingLbl">Dwelling Type:</string>
    <string name="homeInfoDwellingView">Type Dwelling</string>
    <string name="homeInfoHeatingLbl">Heating Type:</string>
    <string name="homeInfoHeatingView">Type Heating</string>
    <string name="homeInfoAddressLbl">Address:</string>
    <string name="homeInfoAddressView">Street Address</string>
    <string name="homeInfoCityLbl">City:</string>
    <string name="homeInfoCityView">Your City</string>
    <string name="homeInfoProvinceLbl">Province:</string>
    <string name="homeInfoProvinceView">XX</string>
    <string name="homeInfoPostalLbl">Postal Code:</string>
    <string name="homeInfoPostalView">XXX XXX</string>
    <string name="autoQuoteIDLbl">Quote ID:</string>
    <string name="autoQuoteIDView">Quote Number</string>
    <string name="autoQuoteDateLbl">Quote Date:</string>
    <string name="autoQuoteDateView">YYYY-MM-DD</string>
    <string name="autoQuoteExpiryLbl">Expiry Date:</string>
    <string name="autoQuoteExpiryView">YYYY-MM-DD</string>
    <string name="autoQuotePremiumLbl">Base Premium:</string>
    <string name="autoQuotePremiumView">12345.12</string>
    <string name="autoQuoteTaxLbl">Tax:</string>
    <string name="autoQuoteTaxView">123.12</string>
    <string name="autoQuoteTotalLbl">Total:</string>
    <string name="autoQuoteTotalView">12345.12</string>
    <string name="secondDriverClientIDView">Client ID</string>
    <string name="secondDriverNameView">Driver Name</string>
    <string name="secondDriverGenderView">Gender</string>
    <string name="secondDriverDOBView">YYYY-MM-DD</string>
    <string name="secondDriverAddressView">Address</string>
    <string name="secondDriverCityView">City</string>
    <string name="secondDriverProvinceView">Provice</string>
    <string name="secondDriverPostalView">Postal Code</string>
    <string name="secondDriverEmailView">Email</string>
    <string name="secondDriverPhoneView">***-***-****</string>
    <string name="secondDriverLicenseView">License Number</string>
    <string name="secondDriverIssueView">YYYY-MM-DD</string>
    <string name="homePolicyIDLbl">Policy ID:</string>
    <string name="homePolicyIDView">Policy ID Number</string>
    <string name="homePolicyDateLbl">Policy Date:</string>
    <string name="homePolicyDateView">YYYY-MM-DD</string>
    <string name="homePolicyExpiryLbl">Expiry Date:</string>
    <string name="homePolicyExpiryView">YYYY-MM-DD</string>
    <string name="homePolicyPremiumLbl">Base Premium:</string>
    <string name="homePolicyPremiumView">12345.12</string>
    <string name="homePolicyTaxLbl">Tax:</string>
    <string name="homePolicyTaxView">123.12</string>
    <string name="homePolicyTotalLbl">Total:</string>
    <string name="homePolicyTotalView">12345.12</string>
    <string name="autoPolicyIDLbl">Policy ID:</string>
    <string name="autoPolicyIDView">Policy Number</string>
    <string name="autoPolicyDateLbl">Policy Date:</string>
    <string name="autoPolicyDateView">YYYY-MM-DD</string>
    <string name="autoPolicyExpiryLbl">Expiry Date:</string>
    <string name="autoPolicyExpiryView">YYYY-MM-DD</string>
    <string name="autoPolicyPremiumLbl">Base Premium:</string>
    <string name="autoPolicyPremiumView">12345.12</string>
    <string name="autoPolicyTaxLbl">Tax:</string>
    <string name="autoPolicyTaxView">123.12</string>
    <string name="autoPolicyTotalLbl">Total:</string>
    <string name="autoPolicyTotalView">12345.12</string>
    <string name="autoInfoIDLbl">Vehicle ID:</string>
    <string name="autoInfoIDView">Vehicle ID Number</string>
    <string name="autoInfoMakeLbl">Make:</string>
    <string name="autoInfoMakeView">Make Of Vehicle</string>
    <string name="autoInfoModelLbl">Model:</string>
    <string name="autoInfoModelView">Model of Vehicle</string>
    <string name="autoInfoYearLbl">Year:</string>
    <string name="autoInfoYearView">YYYY</string>
    <string name="autoInfoPlateLbl">Plate Number:</string>
    <string name="autoInfoPlateView">XXX XXX</string>
    <string name="autoInfoBookLbl">Book Value:</string>
    <string name="autoInfoBookView">12345.12</string>
</resources>
